2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fixup for estimate, write flush line.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c: You can change the tape device
	  between each tape.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* restore-src/amrestore.c (restore): try to find the next chunk 
	  in the current directory.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* example/amanda.conf.in: typo.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	Patch by Roland E. Lipovits <rel@lipo.at0.net>
	* example/amanda.conf.in: typo.

2001-12-04  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c, server-src/taper.c, server-src/chunker.c:
	Replace TRY_AGAIN by TRYAGAIN.

2001-11-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Michael D. Beynon <beynon@ll.mit.edu>

	* server-src/driver.c (main): Take care of empty tapeq.

2001-11-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/diskfile.c (lookup_host): Match must be exact.

2001-11-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c: Add host, disk, datestamp and level on 
	FLUSH line. Add datestamp on DUMP line.
	* server-src/driver.c (read_flush): Read new format of FLUSH line.
	* server-src/driver.c (read_schedule): Read new format of DUMP line.
	* server-src/amflush.c: Write a datestamp on stderr.
	* server-src/amdump.sh.in: Write a datestamp on stderr.
	* server-src/amstatus.pl.in: Works with autoflush.

2001-11-08  Jean-Louis Martineau <martineau@IRO.UMontreal.CA> 
	* server-src/conffile.c (autoflush): New configuration options.
	* server-src/conffile.h (autoflush): New configuration options.
	* man/amanda.8.in: Document it.
	* example/amanda.conf.in: Document it.
	* server-src/holding.h (get_flush, pick_datestamp, pick_all_datestamp,
	cleanup_holdingdisk): New prototype.