@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: reporter.c,v 1.69 2001/11/08 18:46:26 martinea Exp $
+ * $Id: reporter.c,v 1.70 2001/12/09 20:36:03 martinea Exp $
  *
  * nightly Amanda Report generator
  */
@@ -1460,8 +1460,9 @@ handle_start()
 	last_run_tapes++;
 	return;
     case P_PLANNER:
-    case P_DRIVER:
 	normal_run = 1;
+	break;
+    case P_DRIVER:
 	break;
     case P_AMFLUSH:
 	amflush_run = 1;
@@ -1498,7 +1499,7 @@ handle_start()
     if(amflush_run && normal_run) {
 	amflush_run = 0;
 	addline(&notes,
-     "  reporter: both amflush and driver output in log, ignoring amflush.");
+     "  reporter: both amflush and planner output in log, ignoring amflush.");
     }
 }
 
@@ -1828,7 +1829,6 @@ handle_success()
         Idatestamp = 10000*(tm->tm_year+1900) +
                       100*(tm->tm_mon+1) + tm->tm_mday;
 
-fprintf(stderr,"%s %d %d %d\n",dp->name, atoi(datestamp), Idatestamp, atoi(datestamp) == Idatestamp);
 	if(atoi(datestamp) == Idatestamp) {
 	    /* grab original size from record */
 	    origkb = (double)inf.inf[level].size;
