@@ -1,5 +1,13 @@
 2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+	* server-src/driver.c (nodump): new argument, Don't start the dumpers
+	  if set.
+	* server-src/holding.c (get_flush): chdir to original cwd.
+	* server-src/reporter.c: accept driver and amflush line in log.
+	* server-src/amflush.c: exec driver to do the flushing.
+
+2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* server-src/amstatus.pl.in: Fixup for estimate, write flush line.
 
 2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
